--- a/style.css
+++ b/style.css
@@ -16,26 +16,35 @@ body {
   height: 500px;
   max-height: 500px;
   overflow-y: auto;
-  padding: 60px;
-  border-radius: 10px;
+  padding: 80px;
+  border-radius: 15px;
 }
 
 legend {
-  font-size: 30px;
+  font-size: 40px;
+  text-align: center;
   color: #ededed;
   margin-bottom: 30px;
 }
 
+.input-button-container {
+  display: flex;
+  align-items: center;
+}
+
 input {
+  flex-grow: 1;
   font-family: 'Nunito', sans-serif;
   font-weight: 500;
   font-size: 15px;
   background-color: #0a0a0a;
   color: white;
-  padding: 4px;
+  padding: 5px;
   border-radius: 5px;
   border: 2px solid #0e0e0e;
-  width: 210px;
+  margin-bottom: 15px;
+  margin-right: 10px;
+  width: 230px;
 }
 
 .listItem {
@@ -44,10 +53,11 @@ input {
   align-items: center;
   color: #ededed;
   margin-bottom: 10px;
-  margin-left: -37px;
+  margin-left: -38px;
 }
 
 button {
+  flex-shrink: 0;
   background-color: black;
   color: #ededed;
   font-family: 'Nunito', sans-serif;
@@ -56,6 +66,7 @@ button {
   border-radius: 5px;
   padding: 6px;
   width: 60px;
+  margin-bottom: 15px;
   cursor: pointer;
   text-align: center;
 }
@@ -73,6 +84,7 @@ button:hover {
   border-radius: 5px;
   padding: 6px;
   width: 60px;
+  margin-bottom: 10px;
   cursor: pointer;
   text-align: center;
 }
@@ -96,4 +108,62 @@ button:hover {
 
 ::-webkit-scrollbar-track {
   background-color: #0a0a0a;
+}
+
+/* Smartphones */
+@media screen and (max-width: 767px) {
+  .input-button-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+
+  input {
+    margin-right: 10px;
+    flex-grow: 1;
+  }
+
+  button {
+    width: auto;
+  }
+}
+
+/* Tablets */
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+  .container {
+    width: 70%;
+    padding: 60px;
+  }
+
+  legend {
+    font-size: 35px;
+  }
+
+  input {
+    width: 300px;
+  }
+
+  button {
+    width: 80px;
+  }
+}
+
+/* Desktops */
+@media screen and (min-width: 1024px) {
+  .container {
+    width: 50%;
+    padding: 60px;
+  }
+
+  legend {
+    font-size: 40px;
+  }
+
+  input {
+    width: 350px;
+  }
+
+  button {
+    width: 80px;
+  }
 }
