--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+@font-face {
+  font-family: 'Geist-Bold';
+  src: url('./fonts/Geist-Bold.otf');
+}
+
+@font-face {
+  font-family: 'Geist-Regular';
+  src: url('./fonts/Geist-Regular.otf');
+}
+
 body {
-  font-family: 'Nunito', sans-serif;
-  background-color: black;
+  font-family: 'Geist-Regular', sans-serif;
+  background-color: #09090b;
 }
 
 .main-container {
@@ -11,17 +21,18 @@ body {
 }
 
 .container {
-  border: 2px solid #0e0e0e;
+  border: 1px solid #27272a;
+  border-radius: 10px;
   height: 500px;
   max-height: 500px;
   overflow-y: auto;
   padding: 80px;
-  border-radius: 15px;
 }
 
 legend {
+  font-family: 'Geist-Bold', sans-serif;
   font-size: 40px;
-  text-align: center;
+  text-align: start;
   color: #ededed;
   margin-bottom: 30px;
 }
@@ -33,14 +44,14 @@ legend {
 
 input {
   flex-grow: 1;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Geist-Regular', sans-serif;
   font-weight: 500;
-  font-size: 15px;
-  background-color: #0a0a0a;
+  font-size: 14px;
+  background-color: #09090b;
   color: white;
   padding: 5px;
   border-radius: 5px;
-  border: 2px solid #0e0e0e;
+  border: 1px solid #27272a;
   margin-bottom: 15px;
   margin-right: 10px;
   width: 230px;
@@ -53,14 +64,16 @@ input {
   color: #ededed;
   margin-bottom: 10px;
   margin-left: -38px;
+  font-size: 15px;
 }
 
 button {
-  background-color: black;
+  background-color: #09090b;
   color: #ededed;
-  font-family: 'Nunito', sans-serif;
-  font-weight: 600;
-  border: 1px solid #0e0e0e;
+  font-family: 'Geist-Regular', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  border: 1px solid #27272a;
   border-radius: 5px;
   padding: 6px;
   width: 60px;
@@ -75,8 +88,9 @@ button:hover {
 .deleteBtn {
   background-color: red;
   color: #ededed;
-  font-family: 'Nunito', sans-serif;
-  font-weight: 600;
+  font-family: 'Geist-Regular', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
   border: 1px solid #0e0e0e;
   border-radius: 5px;
   padding: 6px;
@@ -94,7 +108,7 @@ button:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #0f0f0f;
+  background: #27272a;
   border-radius: 3px;
 }
 
