--- a/style.css
+++ b/style.css
@@ -8,32 +8,39 @@
   src: url('./fonts/Geist-Regular.otf');
 }
 
-body {
-  font-family: 'Geist-Regular', sans-serif;
-  background-color: #09090b;
+:root {
+  --primaryColor: #09090b;
+  --secondaryColor: #27272a;
+  --secondaryColorHover: #4f4f4f;
+  --fontColor: #ededed;
+  --deleteBtn: #ff1500;
+  --deleteBtnHover: #c41000;
 }
 
-.main-container {
+body {
+  max-width: 500px;
+  margin: 100px auto;
+  font-family: 'Geist-Regular', sans-serif;
+  background-color: var(--primaryColor);
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .container {
-  border: 1px solid #27272a;
+  border: 1px solid var(--secondaryColor);
   border-radius: 10px;
   height: 500px;
   max-height: 500px;
   overflow-y: auto;
   padding: 80px;
+  flex-wrap: wrap;
 }
 
 legend {
   font-family: 'Geist-Bold', sans-serif;
   font-size: 40px;
   text-align: start;
-  color: #ededed;
+  color: var(--fontColor);
   margin-bottom: 30px;
 }
 
@@ -47,51 +54,66 @@ input {
   font-family: 'Geist-Regular', sans-serif;
   font-weight: 500;
   font-size: 14px;
-  background-color: #09090b;
-  color: white;
-  padding: 5px;
+  background-color: var(--primaryColor);
+  color: var(--fontColor);
+  padding: 7px;
   border-radius: 5px;
-  border: 1px solid #27272a;
+  border: 1px solid var(--secondaryColor);
   margin-bottom: 15px;
   margin-right: 10px;
   width: 230px;
+  transition: border-color 0.4s ease;
+}
+
+input:hover {
+  border-color: var(--secondaryColorHover);
 }
 
 .listItem {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #ededed;
+  color: var(--fontColor);
   margin-bottom: 10px;
-  margin-left: -38px;
+  margin-left: -17px;
   font-size: 15px;
+  position: relative;
+}
+
+.listItem::before {
+  content: '•';
+  color: var(--fontColor);
+  font-size: 20px;
+  position: absolute;
+  left: -20px;
+  top: 10px;
 }
 
 button {
-  background-color: #09090b;
-  color: #ededed;
+  background-color: var(--primaryColor);
+  color: var(--fontColor);
   font-family: 'Geist-Regular', sans-serif;
   font-weight: 500;
   font-size: 14px;
-  border: 1px solid #27272a;
+  border: 1px solid var(--secondaryColor);
   border-radius: 5px;
-  padding: 6px;
+  padding: 7px;
   width: 60px;
   margin-bottom: 15px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #1f1f1f;
+  background-color: var(--secondaryColor);
 }
 
 .deleteBtn {
-  background-color: red;
-  color: #ededed;
+  background-color: var(--deleteBtn);
+  color: var(--fontColor);
   font-family: 'Geist-Regular', sans-serif;
   font-weight: 500;
   font-size: 14px;
-  border: 1px solid #0e0e0e;
+  border: 1px solid var(--secondaryColor);
   border-radius: 5px;
   padding: 6px;
   width: 60px;
@@ -100,28 +122,31 @@ button:hover {
 }
 
 .deleteBtn:hover {
-  background-color: #8b0000;
+  background-color: var(--deleteBtnHover);
 }
 
+/* Scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
+  background-color: var(--primaryColor);
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #27272a;
-  border-radius: 3px;
+  background-color: var(--secondaryColor);
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #1a1a1a;
-}
-
-::-webkit-scrollbar-track {
-  background-color: #0a0a0a;
+  background-color: var(--secondaryColorHover);
 }
 
 /* Smartphones */
 @media screen and (max-width: 767px) {
+  body {
+    padding: 20px;
+  }
+
   .input-button-container {
     display: flex;
     flex-direction: row;
@@ -135,45 +160,5 @@ button:hover {
 
   button {
     width: auto;
-  }
-}
-
-/* Tablets */
-@media screen and (min-width: 767px) and (max-width: 1023px) {
-  .container {
-    width: 40%;
-    padding: 60px;
-  }
-
-  legend {
-    font-size: 35px;
-  }
-
-  input {
-    width: 300px;
-  }
-
-  button {
-    width: 80px;
-  }
-}
-
-/* Desktops */
-@media screen and (min-width: 1024px) {
-  .container {
-    width: 20%;
-    padding: 60px;
-  }
-
-  legend {
-    font-size: 40px;
-  }
-
-  input {
-    width: 350px;
-  }
-
-  button {
-    width: 80px;
   }
 }
