--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 
 :root {
   --primaryColor: #09090b;
-  --secondaryColor: #27272a;
-  --secondaryColorHover: #4f4f4f;
+  --secondaryColor: #242424;
+  --secondaryColorHover: #1f1f1f;
   --fontColor: #ededed;
-  --secondaryBtn: #ff1500;
-  --secondaryBtnHover: #c41000;
+  --secondaryBtn: #d93036;
+  --secondaryBtnHover: #ff6166;
 }
 
 body {
@@ -62,11 +62,6 @@ input {
   margin-bottom: 15px;
   margin-right: 10px;
   width: 230px;
-  transition: border-color 0.4s ease;
-}
-
-input:hover {
-  border-color: var(--secondaryColorHover);
 }
 
 .listItem {
@@ -74,7 +69,7 @@ input:hover {
   justify-content: space-between;
   align-items: center;
   color: var(--fontColor);
-  margin-bottom: 10px;
+  margin-bottom: 17px;
   margin-left: -17px;
   font-size: 15px;
   position: relative;
@@ -86,10 +81,10 @@ input:hover {
   font-size: 20px;
   position: absolute;
   left: -20px;
-  top: 10px;
+  top: 1px;
 }
 
-button {
+.primaryBtn {
   background-color: var(--primaryColor);
   color: var(--fontColor);
   font-family: 'Geist-Regular', sans-serif;
@@ -101,10 +96,11 @@ button {
   width: 60px;
   margin-bottom: 15px;
   cursor: pointer;
+  transition: background-color 0.4s ease;
 }
 
-button:hover {
-  background-color: var(--secondaryColor);
+.primaryBtn:hover {
+  background-color: var(--secondaryColorHover);
 }
 
 .deleteBtn {
@@ -113,12 +109,12 @@ button:hover {
   font-family: 'Geist-Regular', sans-serif;
   font-weight: 500;
   font-size: 14px;
-  border: 1px solid var(--secondaryColor);
+  border: none;
   border-radius: 5px;
-  padding: 6px;
+  padding: 7px;
   width: 60px;
   cursor: pointer;
-  text-align: center;
+  transition: background-color 0.4s ease;
 }
 
 .deleteBtn:hover {
