--- a/style.css
+++ b/style.css
@@ -20,23 +20,28 @@
   --yellowMessage: #fde047;
 }
 
-body {
-  max-width: 500px;
-  margin: 100px auto;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   font-family: 'Geist-Regular', sans-serif;
-  background-color: var(--primaryColor);
+}
+
+body {
+  min-height: 100vh;
   display: flex;
   align-items: center;
+  justify-content: center;
+  background-color: var(--primaryColor);
 }
 
 .container {
   border: 1px solid var(--secondaryColor);
-  border-radius: 10px;
+  border-radius: 15px;
   height: 500px;
   max-height: 500px;
   overflow-y: auto;
   padding: 80px;
-  flex-wrap: wrap;
 }
 
 legend {
@@ -47,33 +52,44 @@ legend {
   margin-bottom: 30px;
 }
 
-.input-button-container {
-  display: flex;
-  align-items: center;
+.input-field {
+  position: relative;
 }
 
-input {
-  font-family: 'Geist-Regular', sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-  background-color: var(--primaryColor);
-  color: var(--fontColor);
-  padding: 7px;
-  border-radius: 7px;
+.input-field input {
+  width: 300px;
+  height: 50px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  font-size: 16px;
+  padding: 0 15px;
   border: 1px solid var(--secondaryColor);
-  margin-bottom: 15px;
-  margin-right: 10px;
-  width: 230px;
-  transition: border 0.5s ease;
+  background: transparent;
+  outline: none;
+  color: var(--fontColor);
 }
 
-input:hover {
-  border: 1px solid var(--inputHover);
+.input-field label {
+  position: absolute;
+  top: 35%;
+  left: 15px;
+  transform: translateY(-50%);
+  color: var(--fontColor);
+  font-size: 19px;
+  pointer-events: none;
+  transition: 0.4s;
 }
 
-::placeholder {
-  color: var(--inputHover);
-  font-weight: 500;
+input:focus {
+  border: 1px solid var(--fontColorHover);
+}
+
+input:focus ~ label,
+input:valid ~ label {
+  top: 0;
+  font-size: 16px;
+  padding: 0 10px;
+  background: var(--primaryColor);
 }
 
 .listItem {
@@ -113,51 +129,55 @@ input:hover {
 
 .redMessage {
   font-family: 'Geist-Regular', sans-serif;
-  font-size: 14px;
+  font-size: 15px;
   background-color: transparent;
   color: var(--redMessage);
   border: 1px solid var(--redMessage);
   border-radius: 10px;
   padding: 8px;
+  margin-bottom: 15px;
 }
 
 .greenMessage {
   font-family: 'Geist-Regular', sans-serif;
-  font-size: 14px;
+  font-size: 15px;
   background-color: transparent;
   color: var(--greenMessage);
   border: 1px solid var(--greenMessage);
   border-radius: 10px;
   padding: 8px;
+  margin-bottom: 15px;
 }
 
 .yellowMessage {
   font-family: 'Geist-Regular', sans-serif;
-  font-size: 14px;
+  font-size: 15px;
   background-color: transparent;
   color: var(--yellowMessage);
   border: 1px solid var(--yellowMessage);
   border-radius: 10px;
   padding: 8px;
+  margin-bottom: 15px;
 }
 
 .addBtn {
-  font-family: 'Geist-Regular', sans-serif;
-  font-size: 14px;
-  font-weight: 600;
-  background-color: var(--fontColor);
-  color: var(--primaryColor);
-  border: none;
-  border-radius: 7px;
-  padding: 7px;
+  font-family: 'Geist-Bold', sans-serif;
+  font-size: 16px;
+  background-color: transparent;
+  border: 1px solid var(--secondaryColor);
+  color: var(--fontColor);
+  border-radius: 10px;
+  padding: 8px;
   width: 60px;
-  margin-bottom: 15px;
+  height: 50px;
+  margin-bottom: 20px;
+  margin-left: 10px;
   cursor: pointer;
   transition: background-color 0.4s ease;
 }
 
 .addBtn:hover {
-  background-color: var(--fontColorHover);
+  background-color: var(--secondaryColorHover);
 }
 
 .edit-button {
@@ -202,12 +222,12 @@ input:hover {
   position: absolute;
   bottom: 0;
   left: 0;
-  z-index: 10;
 }
 
 .footer {
   width: 100vw;
   text-align: center;
+  margin-bottom: 20px;
   color: var(--fontColor);
 }
 
@@ -234,18 +254,20 @@ input:hover {
 
 /* Smartphones */
 @media screen and (max-width: 767px) {
-  .input-button-container {
+  .container {
+    width: 80%;
+    padding: 0;
+  }
+
+  legend {
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .input-field input {
     display: flex;
-    flex-direction: row;
-    width: 100%;
-  }
-
-  input {
-    margin-right: 10px;
-    flex-grow: 1;
-  }
-
-  button {
-    width: auto;
+    justify-content: space-between;
+    width: 40px;
+    height: 25px;
   }
 }
