--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   padding: 80px;
 }
 
-legend {
+.title {
   font-family: 'Geist-Bold', sans-serif;
   font-size: 50px;
   text-align: start;
@@ -255,7 +255,8 @@ input:valid ~ label {
     padding: 0;
   }
 
-  legend {
+  .title {
+    margin-top: 25px;
     text-align: center;
     font-size: 20px;
   }
